First pass with Jekyll

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html>
-  <head>
-    <title>sdeming's pages at github</title>
-  </head>
-  <body>
-    <h1>Scott's pages...</h1>
-    Not much to see yet.
-  </body>
-</html>
+---
+layout: default
+title: Scott Deming
+---
+
+<div id="home">
+  <h1>{{ site.title }}</h1>
+  Quite emtpy still, but running on Jekyll.
+</div>
