--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Scott Deming
 ---
 
 <div id="home">
-  <h1>{{ site.title }}</h1>
+  <h1>{{ title }}</h1>
   Quite emtpy still, but running on Jekyll.
 </div>
