--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@ title: Scott Deming
 
 <div id="home">
   <h1>{{ page.title }}</h1>
-  Quite emtpy still, but running on Jekyll.
+  Quite emtpy still.<br/>
+  <ul>
+    <li>Runs on Jekyll</li>
+    <li>Using <a href=http://lessframework.com/">Less framework 2</a></li>
+  </ul>
 </div>
